src/test/deca/syntax/valid/synt/OpArith.deca
// Description:
//    Programme pour tester une liste d'operation arithetique
//
// Resultats:
//    ok
//
// Historique:
//    cree le 01/01/2022

{
    int a= 5;
    int b= (a*2 + a%52)/100-100;
}
